@@ -3,6 +3,8 @@ Release date:
 * Enhancement: Info List - Link type Box option now also links the Info List icon
 * Enhancement: Buttons - Updated Buttons Spacing option to add row spacing when button stack
 * Enhancement: Logo Carousel - Added option to show or hide logo title
+* Enhancement: Logo Grid - Added option to show or hide logo title
+* Enhancement: Logo Grid - Repeater items now show logo title instead of Logo Image text
 * Fixed: Instagram Feed - Carousel was not working when Upgrade Swiper Library experiment is set to active
 
 == 2.7.11 ==
